--- a/index.html
+++ b/index.html
@@ -1,1 +1,193 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Philly Guy Subs | Authentic Philly Cheesesteaks</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Source+Sans+3:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="main-nav">
+        <div class="nav-container">
+            <a href="index.html" class="logo">
+                <span class="logo-icon">🥖</span>
+                <span class="logo-text">Philly Guy</span>
+            </a>
+            <button class="mobile-menu-btn" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-links">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
+    <!-- Hero Section -->
+    <header class="hero">
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+            <div class="hero-badge">EST. 2024</div>
+            <h1 class="hero-title">
+                <span class="title-line">Real Philly</span>
+                <span class="title-line accent">Cheesesteaks</span>
+            </h1>
+            <p class="hero-tagline">Straight outta South Philly. No shortcuts. No compromises.</p>
+            <div class="hero-cta">
+                <a href="menu.html" class="btn btn-primary">View Our Menu</a>
+                <a href="contact.html" class="btn btn-secondary">Find Us</a>
+            </div>
+        </div>
+        <div class="hero-scroll-indicator">
+            <span>Scroll</span>
+            <div class="scroll-arrow"></div>
+        </div>
+    </header>
+
+    <!-- Features Section -->
+    <section class="features">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-tag">Why We're Different</span>
+                <h2 class="section-title">The Philly Way</h2>
+            </div>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">🥩</div>
+                    <h3>Ribeye, Always</h3>
+                    <p>We use only premium ribeye steak, shaved thin and grilled fresh for every single order.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🧀</div>
+                    <h3>Whiz, Provolone, or American</h3>
+                    <p>Your choice. No judgment. But if you ask for swiss, we might give you a look.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🥖</div>
+                    <h3>Amoroso-Style Rolls</h3>
+                    <p>Crusty on the outside, soft on the inside. Shipped fresh, the way it should be.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🔥</div>
+                    <h3>Made to Order</h3>
+                    <p>Nothing sits under a heat lamp. Every sub is crafted when you order it.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Signature Section -->
+    <section class="signature">
+        <div class="signature-bg"></div>
+        <div class="container">
+            <div class="signature-content">
+                <span class="section-tag light">Fan Favorite</span>
+                <h2 class="signature-title">The Philly Guy Special</h2>
+                <p class="signature-description">
+                    Chopped ribeye, caramelized onions, mushrooms, sweet peppers, 
+                    and your choice of cheese on a fresh-baked roll. This is the one.
+                </p>
+                <div class="signature-price">$14.99</div>
+                <a href="menu.html" class="btn btn-primary">Order Now</a>
+            </div>
+            <div class="signature-image">
+                <div class="image-frame">
+                    <div class="placeholder-image">
+                        <span>🥪</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-tag">Word on the Street</span>
+                <h2 class="section-title">What People Are Saying</h2>
+            </div>
+            <div class="testimonials-grid">
+                <blockquote class="testimonial">
+                    <p>"I'm from South Philly and this is the real deal. Finally, a cheesesteak that reminds me of home."</p>
+                    <cite>— Mike D.</cite>
+                </blockquote>
+                <blockquote class="testimonial">
+                    <p>"The Whiz wit' here is absolutely perfect. I don't know how they do it but they nailed it."</p>
+                    <cite>— Sarah T.</cite>
+                </blockquote>
+                <blockquote class="testimonial">
+                    <p>"Best cheesesteak outside of Philadelphia. Period. Don't @ me."</p>
+                    <cite>— James R.</cite>
+                </blockquote>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta-section">
+        <div class="container">
+            <h2 class="cta-title">Ready to Eat?</h2>
+            <p class="cta-text">Stop by and taste what everyone's talking about.</p>
+            <div class="cta-buttons">
+                <a href="menu.html" class="btn btn-primary btn-large">See the Menu</a>
+                <a href="contact.html" class="btn btn-outline btn-large">Get Directions</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="main-footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <a href="index.html" class="logo">
+                        <span class="logo-icon">🥖</span>
+                        <span class="logo-text">Philly Guy</span>
+                    </a>
+                    <p>Bringing authentic Philly flavor to every bite since 2024.</p>
+                </div>
+                <div class="footer-links">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-hours">
+                    <h4>Hours</h4>
+                    <ul>
+                        <li>Mon - Thu: 11am - 9pm</li>
+                        <li>Fri - Sat: 11am - 10pm</li>
+                        <li>Sunday: 12pm - 8pm</li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h4>Contact</h4>
+                    <ul>
+                        <li>1776 Broad Street</li>
+                        <li>Philadelphia, PA 19101</li>
+                        <li>(215) 555-SUBS</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Philly Guy Subs. All rights reserved.</p>
+                <p class="footer-tagline">Go Birds. 🦅</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
